--- a/test/fixtures/places.yml
+++ b/test/fixtures/places.yml
@@ -3,15 +3,17 @@
 one:
   missing_id: 1
   address: MyString
-  map_lat: 1.5
-  map_lon: 1.5
+  latitude: 1.5
+  longtitude: 1.5
+  gmaps: false
   name: MyString
-  description: MyText
+  description: MyString
 
 two:
   missing_id: 1
   address: MyString
-  map_lat: 1.5
-  map_lon: 1.5
+  latitude: 1.5
+  longtitude: 1.5
+  gmaps: false
   name: MyString
-  description: MyText
+  description: MyString
