--- a/test/fixtures/photos.yml
+++ b/test/fixtures/photos.yml
@@ -1,9 +1,9 @@
-# Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
+# Read about fixtures at http://api.rubyonrails.org/classes/Fixtures.html
 
 one:
-  missing_id: 1
   image_name: MyString
+  missing: 
 
 two:
-  missing_id: 1
   image_name: MyString
+  missing: 
