--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 # SQLite version 3.x
 #   gem install sqlite3
 development:
-  adapter: mysql
+  adapter: mysql2
   database: people
   username: people
   password: people
@@ -12,7 +12,7 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-    adapter: mysql
+    adapter: mysql2
     database: people
     username: people
     password: people
@@ -20,7 +20,7 @@ test:
     encoding: utf8
 
 production:
-    adapter: mysql
+    adapter: mysql2
     database: people
     username: people
     password: people
