Update and clear

--- a/config/s3.yml
+++ b/config/s3.yml
@@ -1,2 +1,2 @@
 access_key_id: AKIAJLCAXM25BOTBCJYA
-secret_access_key: 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
+secret_access_key: +t+ylv2DCzOIe+z/SVB3ACT3Ixo1AezJMvDS0Ifc`
