--- a/config/database.yml
+++ b/config/database.yml
@@ -2,7 +2,7 @@
 #   gem install sqlite3
 development:
   adapter: mysql2
-  database: people
+  database: people_development
   username: yapropal
   password: ,b;egbgk
   host: localhost
@@ -13,7 +13,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
     adapter: mysql2
-    database: people
+    database: people_test
     username: yapropal
     password: ,b;egbgk
     host: localhost
