--- a/config/development.sphinx.conf
+++ b/config/development.sphinx.conf
@@ -19,7 +19,7 @@ source missing_core_0
   sql_db = people_development
   sql_query_pre = SET NAMES utf8
   sql_query_pre = SET TIME_ZONE = '+0:00'
-  sql_query = SELECT SQL_NO_CACHE `missings`.`id` * CAST(1 AS SIGNED) + 0 AS `id` , `missings`.`name` AS `name`, `missings`.`id` AS `sphinx_internal_id`, 0 AS `sphinx_deleted`, 1058882117 AS `class_crc`, `missings`.`user_id` AS `user_id`, UNIX_TIMESTAMP(`missings`.`created_at`) AS `created_at`, UNIX_TIMESTAMP(`missings`.`updated_at`) AS `updated_at`, `missings`.`gender` AS `gender` FROM `missings`  WHERE (`missings`.`id` >= $start AND `missings`.`id` <= $end) GROUP BY `missings`.`id` ORDER BY NULL
+  sql_query = SELECT SQL_NO_CACHE `missings`.`id` * CAST(1 AS SIGNED) + 0 AS `id` , `missings`.`name` AS `name`, `missings`.`id` AS `sphinx_internal_id`, 0 AS `sphinx_deleted`, 1058882117 AS `class_crc`, `missings`.`user_id` AS `user_id`, UNIX_TIMESTAMP(`missings`.`created_at`) AS `created_at`, UNIX_TIMESTAMP(`missings`.`updated_at`) AS `updated_at`, UNIX_TIMESTAMP(`missings`.`last_seen`) AS `last_seen`, `missings`.`gender` AS `gender` FROM `missings`  WHERE (`missings`.`id` >= $start AND `missings`.`id` <= $end) GROUP BY `missings`.`id` ORDER BY NULL
   sql_query_range = SELECT IFNULL(MIN(`id`), 1), IFNULL(MAX(`id`), 1) FROM `missings` 
   sql_attr_uint = sphinx_internal_id
   sql_attr_uint = sphinx_deleted
@@ -28,6 +28,7 @@ source missing_core_0
   sql_attr_bool = gender
   sql_attr_timestamp = created_at
   sql_attr_timestamp = updated_at
+  sql_attr_timestamp = last_seen
   sql_query_info = SELECT * FROM `missings` WHERE `id` = (($id - 0) / 1)
 }
 
