--- a/config/database.yml
+++ b/config/database.yml
@@ -21,8 +21,8 @@ test:
 
 production:
     adapter: mysql2
-    database: people
-    username: yapropal
-    password: ,b;egbgk
+    database: missings
+    username: missings
+    password: missings
     host: localhost
     encoding: utf8
