--- a/config/production.sphinx.conf
+++ b/config/production.sphinx.conf
@@ -7,15 +7,15 @@ searchd
   listen = 127.0.0.1:9312
   log = /home/missings/application/log/searchd.log
   query_log = /home/missings/application/log/searchd.query.log
-  pid_file = /home/missings/application/log/searchd.development.pid
+  pid_file = /home/missings/application/log/searchd.production.pid
 }
 
 source missing_core_0
 {
   type = mysql
   sql_host = localhost
-  sql_user = yapropal
-  sql_pass = ,b;egbgk
+  sql_user = missings
+  sql_pass = missings
   sql_db = missings
   sql_query_pre = SET NAMES utf8
   sql_query_pre = SET TIME_ZONE = '+0:00'
