--- a/config/database.yml
+++ b/config/database.yml
@@ -2,9 +2,9 @@
 #   gem install sqlite3
 development:
   adapter: mysql2
-  database: people_development
-  username: yapropal
-  password: ,b;egbgk
+  database: missings_development
+  username: missings
+  password: missings
   host: localhost
   encoding: utf8
 
@@ -13,9 +13,9 @@ development:
 # Do not set this db to the same as development or production.
 test:
     adapter: mysql2
-    database: people_test
-    username: yapropal
-    password: ,b;egbgk
+    database: missings_test
+    username: missings
+    password: missings
     host: localhost
     encoding: utf8
 
