--- a/config/development.sphinx.conf
+++ b/config/development.sphinx.conf
@@ -5,21 +5,21 @@ indexer
 searchd
 {
   listen = 127.0.0.1:9312
-  log = /home/dev/yapropal/log/searchd.log
-  query_log = /home/dev/yapropal/log/searchd.query.log
-  pid_file = /home/dev/yapropal/log/searchd.development.pid
+  log = /home/dev/application/log/searchd.log
+  query_log = /home/dev/application/log/searchd.query.log
+  pid_file = /home/dev/application/log/searchd.development.pid
 }
 
 source missing_core_0
 {
   type = mysql
   sql_host = localhost
-  sql_user = yapropal
-  sql_pass = ,b;egbgk
-  sql_db = people_development
+  sql_user = missings
+  sql_pass = missings
+  sql_db = missings_development
   sql_query_pre = SET NAMES utf8
   sql_query_pre = SET TIME_ZONE = '+0:00'
-  sql_query = SELECT SQL_NO_CACHE `missings`.`id` * CAST(1 AS SIGNED) + 0 AS `id` , `missings`.`name` AS `name`, `missings`.`history` AS `history`, `missings`.`city` AS `city`, `missings`.`id` AS `sphinx_internal_id`, 0 AS `sphinx_deleted`, 1058882117 AS `class_crc`, `missings`.`gender` AS `gender`, `missings`.`age` AS `age`, UNIX_TIMESTAMP(`missings`.`last_seen`) AS `last_seen`, `missings`.`latitude` AS `latitude`, `missings`.`longitude` AS `longitude`, `missings`.`user_id` AS `user_id`, UNIX_TIMESTAMP(`missings`.`created_at`) AS `created_at`, UNIX_TIMESTAMP(`missings`.`updated_at`) AS `updated_at` FROM `missings`  WHERE (`missings`.`id` >= $start AND `missings`.`id` <= $end) GROUP BY `missings`.`id` ORDER BY NULL
+  sql_query = SELECT SQL_NO_CACHE `missings`.`id` * CAST(1 AS SIGNED) + 0 AS `id` , `missings`.`name` AS `name`, `missings`.`history` AS `history`, `missings`.`city` AS `city`, `missings`.`id` AS `sphinx_internal_id`, 0 AS `sphinx_deleted`, 1058882117 AS `class_crc`, IFNULL('Missing', '') AS `sphinx_internal_class`, `missings`.`gender` AS `gender`, `missings`.`age` AS `age`, UNIX_TIMESTAMP(`missings`.`last_seen`) AS `last_seen`, `missings`.`latitude` AS `latitude`, `missings`.`longitude` AS `longitude`, `missings`.`user_id` AS `user_id`, UNIX_TIMESTAMP(`missings`.`created_at`) AS `created_at`, UNIX_TIMESTAMP(`missings`.`updated_at`) AS `updated_at` FROM `missings`  WHERE (`missings`.`id` >= $start AND `missings`.`id` <= $end) GROUP BY `missings`.`id` ORDER BY NULL
   sql_query_range = SELECT IFNULL(MIN(`id`), 1), IFNULL(MAX(`id`), 1) FROM `missings` 
   sql_attr_uint = sphinx_internal_id
   sql_attr_uint = sphinx_deleted
@@ -32,13 +32,14 @@ source missing_core_0
   sql_attr_timestamp = updated_at
   sql_attr_float = latitude
   sql_attr_float = longitude
+  sql_attr_string = sphinx_internal_class
   sql_query_info = SELECT * FROM `missings` WHERE `id` = (($id - 0) / 1)
 }
 
 index missing_core
 {
   source = missing_core_0
-  path = /home/dev/yapropal/app/shared/sphinx/missing_core
+  path = /home/dev/application/app/shared/sphinx/missing_core
   morphology = stem_ru
   charset_type = utf-8
 }
