--- a/config/development.sphinx.conf
+++ b/config/development.sphinx.conf
@@ -19,7 +19,7 @@ source missing_core_0
   sql_db = missings_development
   sql_query_pre = SET NAMES utf8
   sql_query_pre = SET TIME_ZONE = '+0:00'
-  sql_query = SELECT SQL_NO_CACHE `missings`.`id` * CAST(1 AS SIGNED) + 0 AS `id` , `missings`.`name` AS `name`, `missings`.`history` AS `history`, `missings`.`city` AS `city`, `missings`.`id` AS `sphinx_internal_id`, 0 AS `sphinx_deleted`, 1058882117 AS `class_crc`, IFNULL('Missing', '') AS `sphinx_internal_class`, `missings`.`gender` AS `gender`, `missings`.`age` AS `age`, UNIX_TIMESTAMP(`missings`.`last_seen`) AS `last_seen`, `missings`.`latitude` AS `latitude`, `missings`.`longitude` AS `longitude`, `missings`.`user_id` AS `user_id`, UNIX_TIMESTAMP(`missings`.`created_at`) AS `created_at`, UNIX_TIMESTAMP(`missings`.`updated_at`) AS `updated_at` FROM `missings`  WHERE (`missings`.`id` >= $start AND `missings`.`id` <= $end) GROUP BY `missings`.`id` ORDER BY NULL
+  sql_query = SELECT SQL_NO_CACHE `missings`.`id` * CAST(1 AS SIGNED) + 0 AS `id` , `missings`.`name` AS `name`, `missings`.`history` AS `history`, `missings`.`city` AS `city`, `missings`.`id` AS `sphinx_internal_id`, 0 AS `sphinx_deleted`, 1058882117 AS `class_crc`, IFNULL('Missing', '') AS `sphinx_internal_class`, `missings`.`gender` AS `gender`, `missings`.`age` AS `age`, UNIX_TIMESTAMP(`missings`.`last_seen`) AS `last_seen`, `missings`.`latitude` AS `latitude`, `missings`.`longitude` AS `longitude`, `missings`.`user_id` AS `user_id`, `missings`.`published` AS `published`, UNIX_TIMESTAMP(`missings`.`created_at`) AS `created_at`, UNIX_TIMESTAMP(`missings`.`updated_at`) AS `updated_at` FROM `missings`  WHERE (`missings`.`id` >= $start AND `missings`.`id` <= $end) GROUP BY `missings`.`id` ORDER BY NULL
   sql_query_range = SELECT IFNULL(MIN(`id`), 1), IFNULL(MAX(`id`), 1) FROM `missings` 
   sql_attr_uint = sphinx_internal_id
   sql_attr_uint = sphinx_deleted
@@ -27,6 +27,7 @@ source missing_core_0
   sql_attr_uint = age
   sql_attr_uint = user_id
   sql_attr_bool = gender
+  sql_attr_bool = published
   sql_attr_timestamp = last_seen
   sql_attr_timestamp = created_at
   sql_attr_timestamp = updated_at
